2003-01-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Add jni_example target, this
	provides a very simple test case to ensure
	that the JVM can load a generated shared lib.
	* extras/JNI_example/JNI_example.c: New file
	* extras/JNI_example/JNI_example.java: New file.
	* src/xputils/iload.test: Fixup some test case
	results to match the current implementation
	which passes a DEFAULT token.
	* win/makefile.vc: Fixup support for building
	in a build dir that is not tcljava/win.
	Add jni_example target.

2003-01-20  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaCmd.c (Tclblend_Init): Add
	additional TCLBLEND_DEBUG output.
	If an exception is raised during the Interp
	constructor, check to see if it is an
	UnsatisfiedLinkError return a more
	useful error message to Tcl. The old error
	message "java.lang.UnsatisfiedLinkError: init"
	was not very illuminating. Don't propagate
	a Java exception since Tclblend_Init is
	only every invoked by Tcl.
	* src/tclblend/tcl/lang/Interp.java (shlib_load):
	Add a new shlib_load method instead of attempting
	to load the Tcl Blend shared library in the
	static initializer for the class. This new
	approach provides a way for us to catch and
	propagate an exception during loading of the
	shared library back to the caller.

2003-01-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/TclNumArgsException.java
	(TclNumArgsException): Use a StringBuffer instead
	of allocating a string over and over again.

2003-01-10  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_CLASSPATH): Look for
	.../jre/lib/core.jar to support IBM JDK 1.4.

2003-01-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Mention array unset addition.
	* src/jacl/tcl/lang/ArrayCmd.java (cmdProc):
	Add array unset subcommand.

2003-01-09  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/TclIndex.java (get): Don't